--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="NIST Password Security Checker - Validate password strength against NIST SP 800-63B guidelines"
     />
+    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>NIST Password Checker</title>
   </head>
   <body>
